change file type and plot graph
change import from .txt to .docx and change create plot graph all the time to update

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -46,7 +46,7 @@ body{
 
 .mini{
     width: calc(50% - 3.5px);
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
 }
 
 .row{
